--- a/todolist-backend/values.yaml
+++ b/todolist-backend/values.yaml
@@ -48,9 +48,9 @@ ingress:
   annotations:
     kubernetes.io/ingress.class: alb
     alb.ingress.kubernetes.io/scheme: internet-facing
-    alb.ingress.kubernetes.io/group.name: todolist
+    alb.ingress.kubernetes.io/group.name: alb-todolist
     alb.ingress.kubernetes.io/target-type: ip
-    alb.ingress.kubernetes.io/load-balancer-name: todolist
+    alb.ingress.kubernetes.io/load-balancer-name: alb-todolist
     alb.ingress.kubernetes.io/healthcheck-path: '/api/v1/tasks/get'
     alb.ingress.kubernetes.io/healthcheck-interval-seconds: '5'
     alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '2'
